--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "LibWrapper"
+ext.mainProject = "LibWebview"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid,LibThread,LibRequest,LibSqlite"
  */
-ext.developModule = "LibWrapper"
+ext.developModule = "LibWebview"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -27,7 +27,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "2.6.0"
+ext.moduleVersionName = "2.6.1"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -311,7 +311,7 @@ ext.moduleInfo = [
                 "version"            : "2.6.0",
                 "artifactId"         : "lib-webview",
                 "apidependenciesList": [
-                        "com.tencent.tbs.tbssdk:sdk:43939"
+                        "com.tencent.tbs.tbssdk:sdk:43697"
                         , "LibLog", "LibThread", "LibToast", "LibAPK"
                 ]
         ]
