--- a/APPTest/src/main/AndroidManifest.xml
+++ b/APPTest/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
     <application
+        android:name="com.bihe0832.android.framework.base.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/icon"
         android:label="@string/app_name"
@@ -15,6 +16,7 @@
         <activity
             android:name="com.bihe0832.android.test.MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
+            android:theme="@style/activityTheme"
             android:screenOrientation="sensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +27,7 @@
         <activity
             android:name=".TestTTSActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
+            android:theme="@style/activityTheme"
             android:screenOrientation="sensor">
 
         </activity>
@@ -32,6 +35,13 @@
         <activity
             android:name=".TestHttpActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
+            android:theme="@style/activityTheme"
+            android:screenOrientation="sensor"></activity>
+
+        <activity
+            android:name=".module.web.WebPageActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:theme="@style/activityTheme"
             android:screenOrientation="sensor"></activity>
 
         <provider
