--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -27,7 +27,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "2.6.1"
+ext.moduleVersionName = "2.7.0"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -36,7 +36,7 @@ ext.moduleInfo = [
                 "version"                : "",
                 "artifactId"             : "",
                 "apidependenciesList"    : [
-                        "LibWrapper"
+                        "Framework"
                 ],
                 "specialdependenciesList": [
                         "kapt": [
@@ -44,13 +44,21 @@ ext.moduleInfo = [
                         ]
                 ]
         ],
+        "Framework"                : [
+                "version"            : "",
+                "artifactId"         : "",
+                "apidependenciesList": [
+                        "com.android.support:multidex:1.0.0",
+                        "LibWrapper","LibLifecycle"
+                ]
+        ],
         "LibWrapper"                : [
-                "version"            : "2.6.1",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-wrapper",
                 "apidependenciesList": ["LibUtils", "LibUIUtils"]
         ],
         "LibUIUtils"                : [
-                "version"            : "2.6.1",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-uiutils",
                 "apidependenciesList": [
                         "LibCommonUIUtils", "LibFragmentation_swipeback", "LibFlycoTabLayout", "LibQRCode",
@@ -59,7 +67,7 @@ ext.moduleInfo = [
                 ]
         ],
         "LibUtils"                  : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-utils",
                 "apidependenciesList": [
                         "Router", "RouterAnnotation", "LibCommonUtils", "LibChannel", "LibTimer", "LibRequest",
@@ -90,29 +98,29 @@ ext.moduleInfo = [
                 ]
         ],
         "LibAndroid"                : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-android",
                 "apidependenciesList": [
-                        "com.android.support:appcompat-v7:${project.android_support_version}",
-                        "com.android.support:recyclerview-v7:${project.android_support_version}",
-                        "com.android.support:support-annotations:$project.android_support_version",
-                        "com.android.support:support-v4:${project.android_support_version}",
-                        "com.android.support.constraint:constraint-layout:${project.android_constraint_layout_version}"
+//                        "com.android.support:appcompat-v7:${project.android_support_version}",
+//                        "com.android.support:recyclerview-v7:${project.android_support_version}",
+//                        "com.android.support:support-annotations:$project.android_support_version",
+//                        "com.android.support:support-v4:${project.android_support_version}",
+//                        "com.android.support.constraint:constraint-layout:${project.android_constraint_layout_version}",
                 ]
         ],
         "LibLog"                    : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-log",
                 "apidependenciesList": ["LibAndroid"]
         ],
         "LibOS"                     : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-android-os",
                 "apidependenciesList": ["LibLog"]
         ],
 
         "LibCommonUtils"            : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-utils-common",
                 "apidependenciesList": ["LibAndroid", "LibLog"]
         ],
@@ -122,12 +130,12 @@ ext.moduleInfo = [
                 "apidependenciesList": []
         ],
         "LibEncrypt"                : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-encrypt",
                 "apidependenciesList": ["LibLog"]
         ],
         "LibChannel"                : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-channel",
                 "apidependenciesList": ["LibLog"]
         ],
@@ -137,7 +145,7 @@ ext.moduleInfo = [
                 "apidependenciesList": []
         ],
         "LibGson"                   : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-gson",
                 "apidependenciesList": [
                         "com.google.code.gson:gson:${project.gson_version}",
@@ -146,12 +154,12 @@ ext.moduleInfo = [
                 ]
         ],
         "LibHttpCommon"             : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-http-common",
                 "apidependenciesList": ["LibThread", "LibLog"]
         ],
         "LibHttpAdvanced"           : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-http-advanced",
                 "apidependenciesList": ["LibHttpCommon", "LibGson"]
         ],
@@ -161,102 +169,124 @@ ext.moduleInfo = [
                 "apidependenciesList": []
         ],
         "LibDeviceNetwork"          : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-device-network",
-                "apidependenciesList": ["LibCommonUtils", "LibText", "LibThread", "LibEncrypt"]
+                "apidependenciesList": [
+                        "com.android.support:appcompat-v7:${project.android_support_version}",
+                        "LibCommonUtils",
+                        "LibText",
+                        "LibThread",
+                        "LibEncrypt"
+                ]
         ],
         "LibTimer"                  : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-timer",
                 "apidependenciesList": ["LibThread", "LibLog"]
         ],
         "LibConfig"                 : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-config",
                 "apidependenciesList": ["LibCommonUtils"]
         ],
         "LibAPK"                    : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-utils-apk",
                 "apidependenciesList": ["LibToast", "LibLog", "LibEncrypt"]
         ],
         "LibTTS"                    : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-tts",
                 "apidependenciesList": ["LibConfig"]
         ],
         "LibFile"                   : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-file",
                 "apidependenciesList": [
+                        "com.android.support:support-v4:${project.android_support_version}",
                         "LibEncrypt",
-                        "LibCommonUtils"]
+                        "LibCommonUtils"
+                ]
         ],
         "LibZip"                    : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-zip",
                 "apidependenciesList": ["LibLog", "LibThread"]
         ],
         "LibDownloadAndInstall"     : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-download-install",
                 "apidependenciesList": ["LibFile", "LibZip", "LibRequest", "LibThread"]
         ],
         "LibText"                   : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-text",
                 "apidependenciesList": ["LibAndroid"]
         ],
         "LibSuperAPP"               : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-super-app",
                 "apidependenciesList": ["LibDialog", "LibAPK"]
         ],
         "LibDebug"                  : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-debug",
                 "apidependenciesList": ["LibDialog", "LibToast"]
         ],
         "LibCommonUIUtils"          : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-ui-common",
                 "apidependenciesList": ["LibAndroid", "LibLog"]
         ],
         "LibFragmentation_core"     : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-fragmentation-core",
-                "apidependenciesList": ["LibCommonUIUtils"]
+                "apidependenciesList": [
+                        "com.android.support:support-annotations:$project.android_support_version",
+                        "com.android.support:appcompat-v7:${project.android_support_version}",
+                        "com.android.support:support-v4:${project.android_support_version}",
+                        "LibCommonUIUtils"
+                ]
         ],
         "LibFragmentation"          : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-fragmentation",
                 "apidependenciesList": ["LibFragmentation_core"]
         ],
         "LibFragmentation_swipeback": [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-fragmentation-swipeback",
                 "apidependenciesList": ["LibFragmentation"]
         ],
         "LibFlycoTabLayout"         : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-flycotablayout",
-                "apidependenciesList": ["LibCommonUIUtils"]
+                "apidependenciesList": [
+                        "com.android.support:support-v4:${project.android_support_version}",
+                        "com.android.support:support-annotations:$project.android_support_version",
+                        "LibCommonUIUtils"
+                ]
         ],
         "LibQRCode"                 : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-qrcode",
                 "apidependenciesList": [
-                        'com.google.zxing:core:3.3.0',
+                        "com.android.support:appcompat-v7:${project.android_support_version}",
+                        "com.google.zxing:core:3.3.0",
                         "LibCommonUIUtils"
                 ]
         ],
         "LibAdapter"                : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-adapter",
-                "apidependenciesList": ["LibCommonUIUtils"]
+                "apidependenciesList": [
+                        "com.android.support:support-v4:${project.android_support_version}",
+                        "com.android.support:recyclerview-v7:${project.android_support_version}",
+                        "LibCommonUIUtils"
+                ]
         ],
         "LibRefresh"                : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-refresh",
                 "apidependenciesList": [
                         "com.github.ybq:Android-SpinKit:1.0.2",
@@ -269,7 +299,7 @@ ext.moduleInfo = [
                 "apidependenciesList": ["LibThread"]
         ],
         "LibImage"                  : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-image",
                 "apidependenciesList": [
                         "com.github.bumptech.glide:glide:${project.glide_version}",
@@ -278,44 +308,62 @@ ext.moduleInfo = [
                 ]
         ],
         "LibDialog"                 : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-dialog",
-                "apidependenciesList": ["LibThread", "LibImage", "LibOS"]
+                "apidependenciesList": [
+                        "com.android.support.constraint:constraint-layout:${project.android_constraint_layout_version}",
+                        "LibThread", "LibImage", "LibOS"]
         ],
         "LibNotification"           : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-notification",
                 "apidependenciesList": ["LibDialog", "LibAPK", "LibCommonUtils"]
         ],
         "LibCustomView"             : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-custom-view",
-                "apidependenciesList": ["LibAndroid"]
+                "apidependenciesList": [
+                        "com.android.support:support-v4:${project.android_support_version}",
+                        "com.android.support.constraint:constraint-layout:${project.android_constraint_layout_version}",
+                        "LibAndroid"
+                ]
         ],
         "LibRecycleviewExt"         : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-recycleview-ext",
                 "apidependenciesList": ["LibRefresh"]
         ],
         "LibTouchRegion"            : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-touchregion",
                 "apidependenciesList": ["LibCommonUIUtils", "LibOS"]
         ],
         "LibViewExt"                : [
-                "version"            : "2.6.0",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-view-ext",
-                "apidependenciesList": ["LibCommonUIUtils"]
+                "apidependenciesList": [
+                        "com.android.support:support-v4:${project.android_support_version}",
+                        "LibCommonUIUtils"
+                ]
         ],
         "LibWebview"                : [
-                "version"            : "2.6.1",
+                "version"            : "2.7.0",
                 "artifactId"         : "lib-webview",
                 "apidependenciesList": [
-                        "com.tencent.tbs.tbssdk:sdk:43697"
-                        , "LibLog", "LibThread", "LibToast", "LibAPK"
+                        "com.tencent.tbs.tbssdk:sdk:43697",
+                        "LibLog", "LibThread", "LibToast", "LibAPK"
+                ]
+        ],
+        "LibLifecycle"                : [
+                "version"            : "2.7.0",
+                "artifactId"         : "lib-lifecycle",
+                "apidependenciesList": [
+                        "android.arch.lifecycle:extensions:${project.android_arch_lifecycle_version}",
+                        "android.arch.lifecycle:common:${project.android_arch_lifecycle_version}",
+                        "android.arch.lifecycle:runtime:${project.android_arch_lifecycle_version}",
+                        "LibLog",
                 ]
         ]
-
 ]
 
 
