--- a/APPTest/src/main/AndroidManifest.xml
+++ b/APPTest/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true">
         <activity
-            android:name="com.bihe0832.android.test.MainActivity"
+            android:name="com.bihe0832.android.test.TestMainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:theme="@style/activityTheme"
             android:screenOrientation="sensor">
@@ -25,7 +25,7 @@
         </activity>
 
         <activity
-            android:name=".TestTTSActivity"
+            android:name=".module.touch.TouchRegionActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:theme="@style/activityTheme"
             android:screenOrientation="sensor">
@@ -33,7 +33,7 @@
         </activity>
 
         <activity
-            android:name=".TestHttpActivity"
+            android:name=".module.request.TestHttpActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:theme="@style/activityTheme"
             android:screenOrientation="sensor"></activity>
