--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,7 +11,7 @@ ext.mainProject = "APPTest"
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid,LibThread,LibRequest,LibSqlite"
  */
-ext.developModule = "Framework"
+ext.developModule = "LibDialog"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -101,11 +101,6 @@ ext.moduleInfo = [
                 "version"            : "2.7.0",
                 "artifactId"         : "lib-android",
                 "apidependenciesList": [
-//                        "com.android.support:appcompat-v7:${project.android_support_version}",
-//                        "com.android.support:recyclerview-v7:${project.android_support_version}",
-//                        "com.android.support:support-annotations:$project.android_support_version",
-//                        "com.android.support:support-v4:${project.android_support_version}",
-//                        "com.android.support.constraint:constraint-layout:${project.android_constraint_layout_version}",
                 ]
         ],
         "LibLog"                    : [
