transform demo，bug修复

--- a/APPTest/build.gradle
+++ b/APPTest/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
-
+apply plugin: com.bihe0832.android.plugin.TransformTestPlugin
 // 不同类型的包，仅仅修改下面两项即可，其余内容保持一致
 project.ext.applicationID = "com.bihe0832.android.test"
 project.ext.applicationName="子勰Lib"
@@ -44,6 +44,3 @@ android {
     }
 }
 
-dependencies {
-    kapt "com.bihe0832.android:lib-router-compiler:2.0.14"
-}
