--- a/APPTest/src/main/AndroidManifest.xml
+++ b/APPTest/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bihe0832.android.test">
-<!--    <uses-permission android:name="android.permission.CAMERA" />-->
+        package="com.bihe0832.android.test">
+
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name="com.bihe0832.android.app.Application"
