通用http、FileProvider 调整

--- a/APPTest/build.gradle
+++ b/APPTest/build.gradle
@@ -27,6 +27,15 @@ android {
         }
     }
 
+    packagingOptions {
+        project.doNotStripList.each { item ->
+            doNotStrip item
+        }
+        project.excludeList.each { item ->
+            exclude item
+        }
+    }
+
     lintOptions {
         abortOnError false
     }
