--- a/build.gradle
+++ b/build.gradle
@@ -46,10 +46,11 @@ allprojects {
             rootProject.getTasks().create("showInfo") {
                 group = "zixieDev"
                 doLast {
-                System.err.println("\n\n >>>>>>>>>>>>>>>>>>>>>>>>>>>> AndroidAPPFactory <<<<<<<<<<<<<<<<<<<<<<<<<<<<<")
-                System.err.println("|\n|  Android 构建已基于组件化重构，详细信息可以参考文档" )
-                System.err.println("|\n|  https://android.bihe0832.com/#!doc/dev.md" )
-                System.err.println("|\n >>>>>>>>>>>>>>>>>>>>>>>>>>> AndroidAPPFactory <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<")
+                    System.err.println("\n\n >>>>>>>>>>>>>>>>>>>>>>>>>>>> AndroidAPPFactory <<<<<<<<<<<<<<<<<<<<<<<<<<<<<")
+                    System.err.println("|\n|  AAF 相关信息可以参考文档：")
+                    System.err.println("|\n|    AAF官网：https://android.bihe0832.com/#!doc/dev.md")
+                    System.err.println("|\n|    AAF事例：https://android.bihe0832.com/samples/")
+                    System.err.println("|\n >>>>>>>>>>>>>>>>>>>>>>>>>>> AndroidAPPFactory <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<")
                 }
             }
         }
